2014-04-06  João Távora  <joaotavora@gmail.com>

	Fix `electric-pair-delete-adjacent-pairs' in modes binding
	backspace. (bug#16981)
	* elec-pair.el (electric-pair-backward-delete-char): Delete.
	(electric-pair-backward-delete-char-untabify): Delete.
	(electric-pair-mode-map): Bind backspace to a menu item filtering
	a new `electric-pair-delete-pair' command.
	(electric-pair-delete-pair): New command.

2014-04-06  João Távora  <joaotavora@gmail.com>

	* progmodes/python.el (python-electric-pair-string-delimiter): Fix
	triple-quoting electricity.  (Bug#17192)

2014-04-06  João Távora  <joaotavora@gmail.com>

	* elec-pair.el (electric-pair-post-self-insert-function): Don't
	skip whitespace when `electric-pair-text-pairs' and
	`electric-pair-pairs' were used. syntax to
	electric-pair--skip-whitespace.  (Bug#17183)

2014-04-06  Eli Zaretskii  <eliz@gnu.org>

	* leim/quail/ipa.el (ipa-x-sampa): Fix the character produced for
	"<F>".  (Bug#17199)

2014-04-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mpc.el (mpc--status-timer-run): Disable timer if not displayed.
	(mpc--status-idle-timer-run): Use mpc--status-timer-run.

2014-04-05  Glenn Morris  <rgm@gnu.org>

	* help.el (view-lossage): Doc tweak.

2014-04-05  Matthias Dahl  <ml_emacs-lists@binary-island.eu>

	* faces.el (face-spec-recalc): Call make-face-x-resource-internal
	only when inhibit-x-resources is nil, and do that earlier in the
	function.  Doc fix.  (Bug#16694)
	(face-spec-choose): Accept additional optional argument, whose
	value is returned if no matching attributes are found.
	(face-spec-recalc): Use the new optional argument when calling
	face-spec-choose.  (Bug#16378)
	(make-face-x-resource-internal): Do nothing when
	inhibit-x-resources is non-nil.  Don't touch the default face if
	reversed video is given--as was done in previous versions of Emacs.
	(face-set-after-frame-default): Don't call
	make-face-x-resource-internal here.  (Bug#16434)

2014-04-04  Tassilo Horn  <tsdh@gnu.org>
